# codex-cli-monitor

./: .gitignore  .my-prompt  README.md  pyproject.toml  start-collector.sh.example  start-server.sh.example  start-widget.ps1.example
src/codex_cli_monitor/: __init__.py  aggregation.py  api.py  classify.py  cli.py  codex_state.py  collector.py  hook_state.py  hooks.py  install_hooks.py  models.py  monitor.py  procfs.py  shim.py
tests/: test_aggregation.py  test_api.py  test_classify.py  test_cli.py  test_codex_state.py  test_hook_state.py  test_hooks.py  test_install_hooks.py  test_monitor.py  test_procfs.py  test_shim.py  test_widget_animation.py  test_widget_config.py  test_widget_server_colors.py
windows/CodexMonitorWidget/: CodexMonitorWidget.csproj  CodexMonitorWidget.ini.example  FloatingStatusForm.cs  Program.cs  README.md
windows/CodexMonitorWidget/src/: main.c  resources.rc
