[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-cli-monitor"
version = "0.2.0"
description = "Low-intrusion local collector and multi-server Codex monitor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "codex-cli-monitor contributors" }]
dependencies = []

[project.scripts]
codex-monitor = "codex_cli_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
